# hurma

./: .gitignore  .pylintrc  README.md  job.py  requirements.txt  setup.cfg  sparkMain.py  sparkOrgsJoiner.py
hurma/hive_export_jobs/: create_funds_table.hql  get_joined_parent_children.hql  joined_parents_children_org_table.hql  organizations_table.hql  parent_organizations_table.hql
hurma/hive_sql/: create_crunchbase_organizations_schema.hql  create_schema.hql  deduplicate_parent_children_orgs.hql  insert_and_deduplicate_parent_children_org_data.hql  insert_parent_children_org_data_from_org_par_org_tables.hql
hurma/spark_export_jobs/: crunchbase_parent_children_org_joiner.py  write_crunchbase_data_to_elasticsearch.py  write_csv_to_binary.py
requirements/: requirements-dev.txt  requirements.txt
scripts/: create_project_build.sh  deduplicate_parent_children_org_data.sh  load_additional_data_in_parent_children_orgs.sh  load_data_to_hive.sh  load_org_data_to_hive_and_transform_it.sh  load_parquet_to_hdfs.sh  quick_launcher.sh  run_tests.sh  set_hive_config.sh  submit_crunchbase_parent_children_org_joiner.sh  submit_export_csv_to_binaries.sh
src/: requirements.txt
src/hurma_scripts.egg-info/: PKG-INFO  SOURCES.txt
src/requirements/: requirements-dev.txt
src/scripts/: sparkMain.py  sparkParentChildrenOrgJoiner.py
src/tests/: test_scripts.py
tests/: test_spark_export.py
